crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__writing_a_bytes_local_to_a_property_retains_it_before_releasing_the_old_value.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bytes, bytes) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bytes
    v2 = param 2  ; bytes
    ; stmt s0 @10:5-10:31
    retain v1
    v3 = new Foo via Foo::constructor(v1) ! bb1  ; object
    ; stmt s1 @11:5-11:25
    retain v2
    v4 = field.get v3, Foo::data  ; bytes
    release v4
    field.set v3, Foo::data, v2
    release v3
    release v2
    release v1
    release v0
    return
  bb1:
    release v2
    release v1
    release v0
    propagate "m() at t.nvs:10"
}
